--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
-mysql
-./DS_Store
-./app/node_modules
-./app/public/build
-./app/public/hot
-./app/public/storage
-./app/storage/*.key
-./app/vendor
-./app/.env
-./app/.env.backup
-./app/.phpunit.result.cache
-./app/Homestead.json
-./app/Homestead.yaml
-./app/auth.json
-./app/npm-debug.log
-./app/yarn-error.log
-./app/.idea
-./app/.vscode
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
